fix bash command

--- a/app/templates/index.html.twig
+++ b/app/templates/index.html.twig
@@ -23,7 +23,7 @@
 
 <br>    - add domain to hosts
 
-<br><pre>sudo echo '127.0.0.1 symfony.localhost' > /etc/hosts</pre>
+<br><pre>sudo bash -c 'echo "127.0.0.1 symfony.localhost" >> /etc/hosts'</pre>
 
 <br>    - when all components work properly default page will contains this copy of instruction on </pre>symfony.localhost:{choosen_port}</pre>
 
